--- a/backend/config/production.env
+++ b/backend/config/production.env
@@ -9,8 +9,8 @@ JWT_SECRET=ajaypanchal761
 JWT_EXPIRES_IN=30d
 
 # SMS India Hub Configuration (Updated for proper integration)
-SMS_INDIA_HUB_API_KEY=WbI0WTYqwEKPaJQYGV5Ylw
-SMS_INDIA_HUB_SENDER_ID=SMSHUB
+SMSINDIAHUB_API_KEY=WbI0WTYqwEKPaJQYGV5Ylw
+SMSINDIAHUB_SENDER_ID=SMSHUB
 # Note: Base URL is now handled in the service, no need to set it here
 
 # Server Configuration
@@ -39,4 +39,10 @@ SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=fixfly.in@gmail.com
 SMTP_PASS=izty uenk eszy wwzy 
+
+# SMS India Hub Configuration (Primary)
+SMSINDIAHUB_API_KEY=WbI0WTYqwEKPaJQYGV5Ylw
+SMSINDIAHUB_SENDER_ID=SMSHUB
+
+
 
