Changes are done

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -44,5 +44,5 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=fixfly.in@gmail.com
-SMTP_PASS=izty uenk eszy wwzy 
+SMTP_PASS=hzwg sumb aacd cnei 
 
