--- a/backend/config/production.env
+++ b/backend/config/production.env
@@ -38,11 +38,13 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=fixfly.in@gmail.com
-SMTP_PASS=izty uenk eszy wwzy 
+SMTP_PASS=hzwg sumb aacd cnei 
 
 # SMS India Hub Configuration (Primary)
 SMSINDIAHUB_API_KEY=WbI0WTYqwEKPaJQYGV5Ylw
 SMSINDIAHUB_SENDER_ID=SMSHUB
+
+
 
 
 
