--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,9 @@
 # Copy these values to your .env file
 
 # Database Configuration - MongoDB Atlas
-MONGODB_URI=mongodb+srv://ajay761:ajay%401102@cluster0.okjqrni.mongodb.net/FixFly
+#MONGODB_URI=mongodb+srv://ajay761:ajay%401102@cluster0.okjqrni.mongodb.net/FixFly
+
+MONGODB_URI=mongodb+srv://fixfly:fixfly786@cluster0.2ne8beo.mongodb.net/FixFly
 
 # JWT Configuration
 JWT_SECRET=ajaypanchal761
