--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -8,6 +8,7 @@
   "theme_color": "#3b82f6",
   "orientation": "portrait-primary",
   "scope": "/",
+  "prefer_related_applications": false,
   "lang": "en",
   "categories": ["business", "productivity", "utilities"],
   "icons": [
