--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -2,13 +2,14 @@
   "name": "FixFly - Professional IT & Electronics Repair Services",
   "short_name": "FixFly",
   "description": "Professional laptop, desktop, Mac, and electronics repair services. Certified technicians, fast turnaround, and guaranteed quality repairs.",
-  "start_url": "/",
+  "start_url": "/?source=pwa",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#3b82f6",
   "orientation": "portrait-primary",
   "scope": "/",
   "prefer_related_applications": false,
+  "display_override": ["window-controls-overlay", "standalone"],
   "lang": "en",
   "categories": ["business", "productivity", "utilities"],
   "icons": [
