--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -14,13 +14,13 @@
   "categories": ["business", "productivity", "utilities"],
   "icons": [
     {
-      "src": "/image.png",
+      "src": "/loginFixflylogo.png?v=2",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/image.png",
+      "src": "/loginFixflylogo.png?v=2",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -28,7 +28,7 @@
   ],
   "screenshots": [
     {
-      "src": "/image.png",
+      "src": "/loginFixflylogo.png?v=2",
       "sizes": "1280x720",
       "type": "image/png",
       "form_factor": "wide"
@@ -42,7 +42,7 @@
       "url": "/booking",
       "icons": [
         {
-          "src": "/image.png",
+          "src": "/loginFixflylogo.png?v=2",
           "sizes": "96x96"
         }
       ]
@@ -54,7 +54,7 @@
       "url": "/support",
       "icons": [
         {
-          "src": "/image.png",
+          "src": "/loginFixflylogo.png?v=2",
           "sizes": "96x96"
         }
       ]
