--- a/backend/.env
+++ b/backend/.env
@@ -20,7 +20,7 @@ PORT=3000
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000 
-CORS_ORIGIN=https://getfixfly.com/
+#CORS_ORIGIN=https://getfixfly.com/
 
 
 # Rate Limiting
