--- a/backend/config/production.env
+++ b/backend/config/production.env
@@ -54,6 +54,14 @@ FIREBASE_CLIENT_EMAIL=firebase-adminsdk-fbsvc@fixfly-d8e35.iam.gserviceaccount.c
 FIREBASE_CLIENT_ID=106035619768304668471
 FIREBASE_CLIENT_X509_CERT_URL=https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-fbsvc%40fixfly-d8e35.iam.gserviceaccount.com
 
+# Botbee WhatsApp Configuration
+BOTBEE_API_KEY=13816|2rTnPGlI8b7OEl23PapMglbcwif1rOb4pJ4jIH3C0901dcee
+BOTBEE_PHONE_ID=617825224738198
+ADMIN_WHATSAPP=919931354354
+BOTBEE_BASE=https://app.botbee.io
+# Botbee Utility Template ID for booking confirmation
+BOTBEE_BOOKING_TEMPLATE_ID=267669
+
 
 
 
