--- a/backend/config/production.env
+++ b/backend/config/production.env
@@ -16,11 +16,23 @@ SMSINDIAHUB_SENDER_ID=SMSHUB
 # Note: Base URL is now handled in the service, no need to set it here
 
 # Server Configuration
-NODE_ENV=development
+NODE_ENV=production
 PORT=5000
 
+# Frontend URL (CRITICAL for payment callbacks)
+# Set this to your production frontend URL
+FRONTEND_URL=https://getfixfly.com
+# Alternative: https://www.getfixfly.com or https://fixifly.vercel.app
+
 # CORS Configuration
-CORS_ORIGIN=http://localhost:3000
+# Add all your frontend URLs here (comma-separated or multiple lines)
+CORS_ORIGIN=https://getfixfly.com
+# Also allow these origins:
+# https://www.getfixfly.com
+# https://fixifly.vercel.app
+# http://localhost:3000 (for development)
+# http://localhost:8080 (for development)
+# http://localhost:5173 (for development)
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
