--- a/backend/config/production.env
+++ b/backend/config/production.env
@@ -44,9 +44,9 @@ CLOUDINARY_CLOUD_NAME=fixfly
 CLOUDINARY_API_KEY=541225795446565
 CLOUDINARY_API_SECRET=Sd7-NPLSgzzGq4VVR_CyO3o17g0
 
-# Razorpay Configuration (Live Keys)
-RAZORPAY_KEY_ID=rzp_live_RdvKOG3GEcWnDk
-RAZORPAY_KEY_SECRET=Ofl6YU9sRDxt9es3ffRzp1Uk
+# Razorpay Configuration
+RAZORPAY_KEY_ID=rzp_test_8sYbzHWidwe5Zw
+RAZORPAY_KEY_SECRET=GkxKRQ2B0U63BKBoayuugS3D
 
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
