--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "FixFly - Professional IT & Electronics Repair Services",
+  "name": "Fixfly™ | India's Most Trusted Laptop, IT & Home Appliance Doorstep Service App",
   "short_name": "FixFly",
-  "description": "Professional laptop, desktop, Mac, and electronics repair services. Certified technicians, fast turnaround, and guaranteed quality repairs.",
+  "description": "Fixfly™ is India's #1 and most trusted laptop repair, computer repair & IT service provider with doorstep home appliance repair like AC Repar | TV Repair | fridge Repair | washing machine service. Book expert technicians instantly anywhere in India.",
   "start_url": "/?source=pwa",
   "display": "standalone",
   "background_color": "#ffffff",
@@ -14,13 +14,13 @@
   "categories": ["business", "productivity", "utilities"],
   "icons": [
     {
-      "src": "/loginFixflylogo.png?v=2",
+      "src": "/loginFixflylogo.png?v=3",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/loginFixflylogo.png?v=2",
+      "src": "/loginFixflylogo.png?v=3",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -28,7 +28,7 @@
   ],
   "screenshots": [
     {
-      "src": "/loginFixflylogo.png?v=2",
+      "src": "/loginFixflylogo.png?v=3",
       "sizes": "1280x720",
       "type": "image/png",
       "form_factor": "wide"
@@ -42,7 +42,7 @@
       "url": "/booking",
       "icons": [
         {
-          "src": "/loginFixflylogo.png?v=2",
+          "src": "/loginFixflylogo.png?v=3",
           "sizes": "96x96"
         }
       ]
@@ -54,7 +54,7 @@
       "url": "/support",
       "icons": [
         {
-          "src": "/loginFixflylogo.png?v=2",
+          "src": "/loginFixflylogo.png?v=3",
           "sizes": "96x96"
         }
       ]
