--- a/backend/.env
+++ b/backend/.env
@@ -33,8 +33,11 @@ CLOUDINARY_API_KEY=541225795446565
 CLOUDINARY_API_SECRET=Sd7-NPLSgzzGq4VVR_CyO3o17g0
 
 # Razorpay Configuration
-RAZORPAY_KEY_ID=rzp_live_RmLDP4W1dPgg6J
-RAZORPAY_KEY_SECRET=5Nq5LsWFtRT7ysftCpqdrZn5
+#RAZORPAY_KEY_ID=rzp_live_RmLDP4W1dPgg6J
+#RAZORPAY_KEY_SECRET=5Nq5LsWFtRT7ysftCpqdrZn5
+# Razorpay Configuration
+RAZORPAY_KEY_ID=rzp_test_8sYbzHWidwe5Zw
+RAZORPAY_KEY_SECRET=GkxKRQ2B0U63BKBoayuugS3D
 
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
