--- a/backend/.env
+++ b/backend/.env
@@ -43,7 +43,7 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=fixfly.in@gmail.com
-SMTP_PASS=hzwg sumb aacd cnei 
+SMTP_PASS=fyhb jgys dkto wean
 
 
 # Firebase Configuration for Push Notifications
