--- a/backend/config/production.env
+++ b/backend/config/production.env
@@ -40,7 +40,7 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=fixfly.in@gmail.com
-SMTP_PASS=hzwg sumb aacd cnei 
+SMTP_PASS=fyhb jgys dkto wean
 
 # SMS India Hub Configuration (Primary)
 SMSINDIAHUB_API_KEY=WbI0WTYqwEKPaJQYGV5Ylw
