--- a/backend/config/production.env
+++ b/backend/config/production.env
@@ -32,9 +32,9 @@ CLOUDINARY_CLOUD_NAME=fixfly
 CLOUDINARY_API_KEY=541225795446565
 CLOUDINARY_API_SECRET=Sd7-NPLSgzzGq4VVR_CyO3o17g0
 
-# Razorpay Configuration (Test Credentials)
-RAZORPAY_KEY_ID=rzp_test_8sYbzHWidwe5Zw
-RAZORPAY_KEY_SECRET=GkxKRQ2B0U63BKBoayuugS3D
+# Razorpay Configuration (Live Credentials)
+RAZORPAY_KEY_ID=rzp_live_RyCVwnDNEvO2uL
+RAZORPAY_KEY_SECRET=jhc3nFz1B10oWNZZBP1ChVRO
 
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
