smtp credentials change

--- a/backend/.env
+++ b/backend/.env
@@ -42,9 +42,8 @@ RAZORPAY_KEY_SECRET=jhc3nFz1B10oWNZZBP1ChVRO
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=fixfly.in@gmail.com
-SMTP_PASS=fyhb jgys dkto wean
-
+SMTP_USER=Getfixfly@gmail.com
+SMTP_PASS=jfcc mxvu qnjp bssj
 
 # Firebase Configuration for Push Notifications
 FIREBASE_PROJECT_ID=fixfly-d8e35
