--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "firebase-admin": "^13.6.0",
     "form-data": "^4.0.4",
     "helmet": "^8.1.0",
+    "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^4.0.0",
     "moment": "^2.30.1",
