all changes done

--- a/backend/.env
+++ b/backend/.env
@@ -64,3 +64,5 @@ BOTBEE_BASE=https://app.botbee.io
 BOTBEE_BOOKING_TEMPLATE_ID=267669
 
 
+# Frontend URL for email links
+FRONTEND_URL=https://getfixfly.com
