--- a/backend/.env
+++ b/backend/.env
@@ -16,7 +16,7 @@ SMSINDIAHUB_SENDER_ID=SMSHUB
 # Note: Ba
 # Server Configuration
 NODE_ENV=development
-PORT=3000
+PORT=5000
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000 
@@ -44,8 +44,8 @@ RAZORPAY_KEY_SECRET=jhc3nFz1B10oWNZZBP1ChVRO
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=Getfixfly@gmail.com
-SMTP_PASS=jfcc mxvu qnjp bssj
+SMTP_USER=fixfly.app@gmail.com
+SMTP_PASS=rslj yhba opma cgoe
 
 # Firebase Configuration for Push Notifications
 FIREBASE_PROJECT_ID=fixfly-d8e35
@@ -61,7 +61,7 @@ BOTBEE_PHONE_ID=617825224738198
 ADMIN_WHATSAPP=919931354354
 BOTBEE_BASE=https://app.botbee.io
 # Botbee Utility Template ID for booking confirmation
-BOTBEE_BOOKING_TEMPLATE_ID=267669
+BOTBEE_BOOKING_TEMPLATE_ID=308508
 
 
 # Frontend URL for email links
