--- a/backend/.env
+++ b/backend/.env
@@ -45,7 +45,7 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=fixfly.app@gmail.com
-SMTP_PASS=rslj yhba opma cgoe
+SMTP_PASS=dchn ysbg vjzy cpps
 
 # Firebase Configuration for Push Notifications
 FIREBASE_PROJECT_ID=fixfly-d8e35
