--- a/backend/config/production.env
+++ b/backend/config/production.env
@@ -39,8 +39,8 @@ RAZORPAY_KEY_SECRET=jhc3nFz1B10oWNZZBP1ChVRO
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=Getfixfly@gmail.com
-SMTP_PASS=jfcc mxvu qnjp bssj
+SMTP_USER=fixfly.app@gmail.com
+SMTP_PASS=dchn ysbg vjzy cpps
 
 # SMS India Hub Configuration (Primary)
 SMSINDIAHUB_API_KEY=WbI0WTYqwEKPaJQYGV5Ylw
