email service update

--- a/backend/.env
+++ b/backend/.env
@@ -41,11 +41,11 @@ RAZORPAY_KEY_SECRET=jhc3nFz1B10oWNZZBP1ChVRO
 #RAZORPAY_KEY_ID=rzp_test_8sYbzHWidwe5Zw
 #RAZORPAY_KEY_SECRET=GkxKRQ2B0U63BKBoayuugS3D
 
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_SECURE=false
-SMTP_USER=fixfly.app@gmail.com
-SMTP_PASS=dchn ysbg vjzy cpps
+SMTP_HOST=smtp.hostinger.com
+SMTP_PORT=465
+SMTP_SECURE=true
+SMTP_USER=info@getfixfly.com
+SMTP_PASS="Getfixfly!@#123"
 
 # Firebase Configuration for Push Notifications
 FIREBASE_PROJECT_ID=fixfly-d8e35
