--- a/backend/config/production.env
+++ b/backend/config/production.env
@@ -36,11 +36,11 @@ CLOUDINARY_API_SECRET=Sd7-NPLSgzzGq4VVR_CyO3o17g0
 RAZORPAY_KEY_ID=rzp_live_RyCVwnDNEvO2uL
 RAZORPAY_KEY_SECRET=jhc3nFz1B10oWNZZBP1ChVRO
 
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_SECURE=false
-SMTP_USER=fixfly.app@gmail.com
-SMTP_PASS=dchn ysbg vjzy cpps
+SMTP_HOST=smtp.hostinger.com
+SMTP_PORT=465
+SMTP_SECURE=true
+SMTP_USER=info@getfixfly.com
+SMTP_PASS="Getfixfly!@#123"
 
 # SMS India Hub Configuration (Primary)
 SMSINDIAHUB_API_KEY=WbI0WTYqwEKPaJQYGV5Ylw
