--- a/backend/config/production.env
+++ b/backend/config/production.env
@@ -16,7 +16,7 @@ SMSINDIAHUB_SENDER_ID=SMSHUB
 # Note: Base URL is now handled in the service, no need to set it here
 
 # Server Configuration
-NODE_ENV=development
+NODE_ENV=production
 PORT=5000
 
 # CORS Configuration
