--- a/backend/config/production.env
+++ b/backend/config/production.env
@@ -20,7 +20,7 @@ NODE_ENV=production
 PORT=5000
 
 # CORS Configuration
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=https://getfixfly.com,https://www.getfixfly.com
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
